setup integrations
